# YouTube-Cloud

./: CMakeLists.txt  Makefile  README.md
docs/: architecture_ru.md
include/youtube_cloud/: common.h  decoder.h  encoder.h  progress_sink.h
src/cli/: main.cpp
src/core/: common.cpp  decoder.cpp  encoder.cpp
